name:                yawll
version:             0.0.1.0
synopsis:            Yet Another AWS Lambda Library
description:         Make a custom AWS Lambda runtime
homepage:            https://github.com/jsoo1/yawll
license:             BSD3
license-file:        LICENSE
author:              John Soo
maintainer:          jsoo1@asu.edu
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  build-depends: aeson
               , base >=4.7 && <5
               , bytestring >=0.10 && <0.11
               , case-insensitive >1.2 && <1.3
               , errors >= 2.3 && <24
               , hreq-client >= 0.1.0 && <0.1.1
               , hreq-core >= 0.1.0 && <0.1.1
               , lucid >=2.9.11 && <3
               , mtl >=2.2.2 && <2.3
               , text >= 1.2.4.0 && <1.3
               , unix >= 2.7.2.2 && < 2.8
               , utf8-string >=1.0 && <1.1
               , uuid >=1.3 && <1.4
  exposed-modules: AWS
                 , AWS.InitError
                 , AWS.Invocation
                 , AWS.Lambda
                 , AWS.Startup
                 , Data.AWS.Error
                 , Data.AWS.Runtime
                 , Data.AWS.Runtime.Context
                 , Data.AWS.Runtime.Invocation
                 , Data.AWS.Runtime.Response
                 , Data.AWS.Startup
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
